--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id="js-specific-breed" class="hidden">
             <form id="js-form-specific-breed">
                 <label for="search-term">Enter the dog type to search for:</label>
-                <input type="text" title="Come on! That isn't a dog." name="search-term" id="js-breed-list" minlength="1" maxlength="30" pattern="^[a-zA-Z -]+$">
+                <input type="text" title="Sorry. This site only understands English." name="search-term" id="js-breed-list" minlength="1" maxlength="30" pattern="^[a-zA-Z -]+$">
                 <input type="submit" value="Get your picture!">
             </form>
             <p id="js-error-message" class="error-message"></p>
